--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,12 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
-    },
+        },
+        "files": [
+            "app/Helper/helper.php"
+
+        ] 
+       },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
